#327 resolve comment
