# dong-service/docs/swagger.json
@@ -732,9 +732,9 @@
                 }
             }
         },
-        "/api/v1/red-envelopes/claimed-by-wallet": {
+        "/api/v1/red-envelopes/claimed-by-user": {
             "get": {
-                "description": "Retrieve red envelope claims associated with a specific wallet address",
+                "description": "Retrieve red envelope claimed associated with a specific user",
                 "consumes": [
                     "application/json"
                 ],
@@ -744,7 +744,7 @@
                 "tags": [
                     "red_envelopes"
                 ],
-                "summary": "Get red envelope claims by wallet address",
+                "summary": "Get red envelope claimed by user",
                 "responses": {
                     "200": {
                         "description": "OK",
@@ -797,7 +797,7 @@
                 "summary": "close red envelope session",
                 "parameters": [
                     {
-                        "description": "Get Detail Request",
+                        "description": "Close Session Request",
                         "name": "request",
                         "in": "body",
                         "required": true,
@@ -858,9 +858,9 @@
                 }
             }
         },
-        "/api/v1/red-envelopes/created-by-wallet": {
+        "/api/v1/red-envelopes/created-by-user": {
             "get": {
-                "description": "Retrieve red envelopes created by a specific wallet address",
+                "description": "Retrieve red envelopes created by a specific user",
                 "consumes": [
                     "application/json"
                 ],
@@ -870,7 +870,7 @@
                 "tags": [
                     "red_envelopes"
                 ],
-                "summary": "Get red envelopes created by wallet address",
+                "summary": "Get red envelopes created by user",
                 "responses": {
                     "200": {
                         "description": "OK",
@@ -908,9 +908,9 @@
                 }
             }
         },
-        "/api/v1/red-envelopes/detail": {
-            "post": {
-                "description": "get detail red envelope by id and wallet address",
+        "/api/v1/red-envelopes/detail/:id": {
+            "get": {
+                "description": "get detail red envelope by id",
                 "consumes": [
                     "application/json"
                 ],
@@ -920,25 +920,14 @@
                 "tags": [
                     "red_envelopes"
                 ],
-                "summary": "get detail red envelope by id and wallet address",
+                "summary": "get detail red envelope by id",
                 "parameters": [
                     {
-                        "description": "Get Detail Request",
-                        "name": "request",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "type": "object",
-                            "properties": {
-                                "id": {
-                                    "type": "integer",
-                                    "format": "int64"
-                                },
-                                "wallet_address": {
-                                    "type": "string"
-                                }
-                            }
-                        }
+                        "type": "integer",
+                        "description": "Red Envelope ID",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
                     }
                 ],
                 "responses": {
@@ -1035,7 +1024,7 @@
                         "BearerAuth": []
                     }
                 ],
-                "description": "update status red envelope to published",
+                "description": "update status red envelope to published or failed",
                 "consumes": [
                     "application/json"
                 ],
@@ -1045,7 +1034,7 @@
                 "tags": [
                     "red_envelopes"
                 ],
-                "summary": "update status red envelope to published",
+                "summary": "update status red envelope",
                 "parameters": [
                     {
                         "description": "Update Status Request",
@@ -1112,16 +1101,16 @@
                 }
             }
         },
-        "/api/v1/red_envelopes/:id": {
+        "/api/v1/red_envelopes/:id/recipients": {
             "get": {
-                "description": "Retrieve details of a red envelope session by its ID",
+                "description": "Returns a list of users who have received red envelope",
                 "produces": [
                     "application/json"
                 ],
                 "tags": [
                     "red_envelopes"
                 ],
-                "summary": "Get red envelope by ID",
+                "summary": "Get Recipients by red envelope id",
                 "parameters": [
                     {
                         "type": "integer",
@@ -1965,7 +1954,7 @@
                 "created_at": {
                     "type": "string"
                 },
-                "last_block": {
+                "last_balance_update": {
                     "type": "integer"
                 },
                 "transaction_count": {
